# SwiftRenderer

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
Example/: CMakeLists.txt
Example/Shaders/: CMakeLists.txt
Example/Source/: Parser.cpp  Parser.hpp  main.cpp
Examples/: CMakeLists.txt
Examples/Scripts/Python/: Compress.py  UseDDS.py
Examples/Shaders/: model.frag  skybox.frag
Examples/Showcase/: CMakeLists.txt
Examples/Showcase/Source/: App.cpp
Examples/Utility/: CMakeLists.txt
Examples/Utility/Include/: Camera.hpp  Parser.hpp  SceneHelper.hpp  Structs.hpp  Window.hpp
Examples/Utility/Source/: Camera.cpp  Parser.cpp  SceneHelper.cpp  Window.cpp
Include/: PCH.hpp  Structs.hpp  Swift.h  Swift.hpp  SwiftEnums.hpp  SwiftImgui.hpp  SwiftPCH.hpp  SwiftStructs.hpp  SwiftUtil.h  SwiftUtil.hpp
Include/Vulkan/: VulkanConstants.hpp  VulkanInit.hpp  VulkanRender.hpp  VulkanStructs.hpp  VulkanUtil.hpp
Shaders/: CMakeLists.txt  bindings.glsl  cubemap.vert  equiToCubemap.frag  model.frag  model.vert
Source/: Swift.cpp  SwiftUtil.cpp
Source/Vulkan/: VulkanInit.cpp  VulkanRender.cpp  VulkanUtil.cpp
